<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoBuddy</string>
    <string name="google_maps_key">{MAPS_API_KEY}</string>
    <string name="profile_button">Profile Button</string>
    <string name="register_new_tracker">Register New Tracker\n</string>
    <string name="find_me">Find Me</string>
    <string name="GeoBuddy_logo">GeoBuddy Logo</string>
    <string name="forgot_password">forgot password</string>
    <string name="reset_password">reset password</string>
    <string name="email">Enter Your Email</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="back_to_login">back to login?\n</string>
    <string name="sign_in_to_your_account">Sign In To Your Account</string>
    <string name="emails">Email</string>
    <string name="passwords">Password</string>
    <string name="password">Enter Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or_sign_in_with">-------OR SIGN IN WITH-------</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="separator">|</string>
    <string name="geobuddy_logo">GeoBuddy Logo</string>
    <string name="Enter_otp_sent_to_email">"Enter Email Sent "</string>
    <string name="Enter_6_digit_otp">"Enter 6 digit OTP "</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="welcome">Welcome To</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="username">Username</string>
    <string name="Username">Enter Your Username</string>
    <string name="phoneNo">Phone Number</string>
    <string name="PhoneNo">Enter Your Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_and_condition">Agree To Our Terms and Conditions</string>
    <string name="Sign_up">SIGN UP</string>
    <string name="text">"Google Sign Up "</string>
    <string name="already_have_an_account">Already Have an Account? Log In</string>
    <string name="register_your_tracker">Register Your Tracker</string>
    <string name="enter_luggage_type">Enter Luggage Type</string>
    <string name="enter_luggage_color">Enter Luggage Color</string>
    <string name="enter_luggage_description">Enter Luggage Description</string>
    <string name="enter_pet_name">Enter Pet Name</string>
    <string name="enter_pet_breed">Enter Pet Breed</string>
    <string name="enter_pet_age">Enter Pet Age</string>
    <string name="enter_pet_description">Enter Pet Description</string>
    <string name="enter_child_name">Enter Child Name</string>
    <string name="enter_child_age">Enter Child Age</string>
    <string name="enter_child_description">Enter Child Description</string>
    <string name="upload_image_button">Upload Image</string>
    <string name="remove_image">Remove Image</string>
    <string name="enter_tracker_name">Enter Tracker Name</string>
    <string name="enter_imei_number">Enter Imei Number</string>
    <string name="status">Status</string>
    <string name="register_tracker">Register Tracker</string>
    <string name="go_to_tracking_map">Go To Map</string>
    <string name="image_view">Image View</string>
    <string name="test_firestore">Test Firestore</string>
    <string name="logout">logout</string>
    <string name="user_name">User Name</string>
    <string name="_254_712_345678">+254 712 345678</string>
    <string name="johndoe_email_com">johndoe@email.com</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="map_settings">Map Settings</string>
    <string name="modify_password">Modify Password</string>
    <string name="faq">FAQ</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="Logout">Logout</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="about_us">About Us</string>
    <string name="more_function">More Function</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="profile_image">Profile Image</string>
    <string name="cancel">Cancel</string>
    <string name="profile_dashboard">profile dashboard</string>
    <string name="google_maps">Google Maps</string>
    <string name="select_your_preferred_map_service">Select Your Preferred Maps Service</string>
    <string name="modify_your_password">Modify Your Password</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="Mobile_number">Mobile Number</string>
    <string name="old_password">Old Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="toggle_old_password">Toggle old password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="toggle_new_password">Toggle new password</string>
    <string name="confirm_passwords">Confirm Password</string>
    <string name="toggle_confirm_password">Toggle confirm password</string>
    <string name="confirm">Confirm</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="question">Question?</string>
    <string name="answer_here">Answer here</string>
    <string name="faq_section">FAQ Section</string>
    <string name="sample_question">Sample Question</string>
    <string name="sample_answer">Sample Answer</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="Privacy_policy">Privacy Policy</string>
    <string name="aboutus">AboutUs</string>
    <string name="loading_privacy_policy">Loading Privacy Policy...</string>
    <string name="i_accept_the_geobuddy_privacy_policy">I accept the GeoBuddy Privacy Policy</string>
    <string name="loading">Loading...</string>
    <string name="back_to_profile">Back to Profile</string>
    <string name="privacy_policy_text">
    <h1>Privacy Policy</h1>
    </string>
    <string name="about_us_text">
        <h1>About Our App</h1>
    </string>
    <string name="view_trackers">View Trackers</string>
    <string name="messages_header" />
    <string name="signature_title" />
    <string name="reply_title" />
    <string name="sync_header" />
    <string name="sync_title" />
    <string name="attachment_summary_off" />
    <string name="attachment_summary_on" />
    <string name="attachment_title" />
    <string name="route_to_tracker">Route to Tracker</string>
    <string name="street_view">Street View</string>
    <string name="app_version">App Version: 1.0.0</string>
    <string name="registering">registering</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="more_functions">More Functions</string>
</resources>