<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="24dp">

    <!--GeoBuddy Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="135dp"
        android:layout_height="108dp"
        android:contentDescription="@string/GeoBuddy_logo"
        android:src="@drawable/geobuddy_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--Sign-in Title -->
    <TextView
        android:id="@+id/signInTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_your_account"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!--Email Input Field -->
    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/emails"
        android:textColor="#004D40"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/signInTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#004D40"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--Password Input -->
    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/passwords"
        android:textColor="#1B5E20"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/emailInput"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--Sign In Button -->

    <!-- OR Sign in with -->

    <!--Google Sign-In Button -->

    <!--Bottom Text: Sign Up & Forgot Password -->

    <Button
        android:id="@+id/signInButton"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/background_gradient"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <TextView
        android:id="@+id/signInWithLabel"
        android:layout_width="221dp"
        android:layout_height="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/or_sign_in_with"
        android:textColor="#1B5E20"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

    <ImageView
        android:id="@+id/googleSignInButton"
        android:layout_width="43dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:contentDescription="@string/google_sign_in"
        android:focusable="true"
        android:src="@drawable/google_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInWithLabel" />

    <LinearLayout
        android:id="@+id/bottomTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleSignInButton">

        <TextView
            android:id="@+id/dontHaveAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="#1B5E20"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/separator"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:paddingHorizontal="4dp"
            android:text="@string/separator"
            android:textColor="#1B5E20"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/forgotPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>