<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    android:background="@color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">
        <!--Welcome Text with Logo -->
        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"/>
        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/GeoBuddy_logo"
            android:src="@drawable/geobuddy_logo"
            app:layout_constraintStart_toEndOf="@+id/welcomeText"
            app:layout_constraintTop_toTopOf="@id/welcomeText" />

        <!--Create Account Title-->
        <TextView
            android:id="@+id/createAccountTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_your_account"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <!-- Username Input -->
        <TextView
            android:id="@+id/usernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/username"
            android:textStyle="bold"
            android:textColor="#004D40"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createAccountTitle" />

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/Username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#004D40"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameLabel"
            android:layout_marginTop="8dp"/>
        <!--Phone Number Input -->
        <TextView
            android:id="@+id/phoneNoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/phoneNo"
            android:textStyle="bold"
            android:textColor="#004D40"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

        <EditText
            android:id="@+id/phoneNoInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:autofillHints="given-name"
            android:hint="@string/PhoneNo"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColorHint="#004D40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNoLabel"
            android:layout_marginTop="8dp"/>
        <!--Email Input -->
        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/email"
            android:textStyle="bold"
            android:textColor="#004D40"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNoInput" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:autofillHints="given-name"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailLabel"
            android:layout_marginTop="8dp"/>
        <!-- Password Input -->
        <TextView
            android:id="@+id/passwordsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/passwords"
            android:textStyle="bold"
            android:textColor="#1B5E20"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInput" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:autofillHints="given-name"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.437"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordsLabel" />
        <!--Confirm Password Input -->
        <TextView
            android:id="@+id/confirmPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/confirm_password"
            android:textStyle="bold"
            android:textColor="#1B5E20"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

        <EditText
            android:id="@+id/confirmPasswordInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:autofillHints="given-name"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#004D40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordLabel" />

        <!--Terms & Conditions Checkbox -->
        <CheckBox
            android:id="@+id/termsCheckbox"
            android:layout_width="285dp"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:text="@string/terms_and_condition"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordInput" />
        <!--Sign Up Button -->
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_gradient"
            android:enabled="false"
            android:text="@string/Sign_up"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/termsCheckbox" />

        <!-- OR Sign in with -->
        <TextView
            android:id="@+id/signUpLabel"
            android:layout_width="226dp"
            android:layout_height="17dp"
            android:layout_marginTop="8dp"
            android:text="@string/or_sign_in_with"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/signUpButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <!--Google Sign In Button -->
        <ImageView
            android:id="@+id/googleSignUpButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/text"
            android:src="@drawable/google_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.373"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpLabel"/>

        <!--Already have an account? Sign In -->
        <TextView
            android:id="@+id/signInText"
            android:layout_width="266dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.319"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/googleSignUpButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>