<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    android:background="@color/white">
    <!--GeoBuddy Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="135dp"
        android:layout_height="108dp"
        android:contentDescription="@string/GeoBuddy_logo"
        android:src="@drawable/geobuddy_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--Forgot Password Title -->
    <TextView
        android:id="@+id/forgotPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <!--Instruction -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textSize="14sp"
        android:textColor="#1B5E20"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <!--Email Input Field -->
    <EditText
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/black"
        android:textColorHint="#004D40"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <!--Send Reset Link Button -->
    <Button
        android:id="@+id/sendResetLinkButton"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_gradient"
        android:text="@string/send_reset_link"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />
    <!--Back to Login -->
    <TextView
        android:id="@+id/backToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/back_to_login"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendResetLinkButton" />

</androidx.constraintlayout.widget.ConstraintLayout>